--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -4,4 +4,12 @@
 
 <web-app>
   <display-name>Archetype Created Web Application</display-name>
+<!--  <servlet>-->
+<!--      <servlet-name>getRestaurants</servlet-name>-->
+<!--      <servlet-class>IECA.servlets.GetRestaurants</servlet-class>-->
+<!--  </servlet>-->
+<!--  <servlet-mapping>-->
+<!--    <servlet-name>getRestaurants</servlet-name>-->
+<!--    <url-pattern>/get</url-pattern>-->
+<!--  </servlet-mapping>-->
 </web-app>
