add credit handled.

--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -12,4 +12,12 @@
 <!--    <servlet-name>getRestaurants</servlet-name>-->
 <!--    <url-pattern>/get</url-pattern>-->
 <!--  </servlet-mapping>-->
+<!--  <servlet>-->
+<!--    <servlet-name>userInfo</servlet-name>-->
+<!--    <servlet-class>IECA.servlets.UserInfo</servlet-class>-->
+<!--  </servlet>-->
+<!--  <servlet-mapping>-->
+<!--    <servlet-name>userInfo</servlet-name>-->
+<!--    <url-pattern>/UserInfo</url-pattern>-->
+<!--  </servlet-mapping>-->
 </web-app>
