--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -12,6 +12,14 @@
     <filter-name>CorsFilter</filter-name>
     <url-pattern>/*</url-pattern>
   </filter-mapping>
+<!--  <filter>-->
+<!--    <filter-name>DelayFilter</filter-name>-->
+<!--    <filter-class>IECA.servlets.DelayFilter</filter-class>-->
+<!--  </filter>-->
+<!--  <filter-mapping>-->
+<!--    <filter-name>DelayFilter</filter-name>-->
+<!--    <url-pattern>/restaurants/*,/saleFoods/*,users/*</url-pattern>-->
+<!--  </filter-mapping>-->
   <servlet>
     <servlet-name>dispatcher</servlet-name>
     <servlet-class>
