--- a/pom.xml
+++ b/pom.xml
@@ -77,6 +77,11 @@
       <artifactId>json</artifactId>
       <version>20190722</version>
     </dependency>
+      <dependency>
+          <groupId>xmlunit</groupId>
+          <artifactId>xmlunit</artifactId>
+          <version>1.6</version>
+      </dependency>
   </dependencies>
 
   <build>
