--- a/pom.xml
+++ b/pom.xml
@@ -101,12 +101,16 @@
       <version>8.0.19</version>
     </dependency>
 
+<!--    <dependency>-->
+<!--      <groupId>org.bitbucket.b_c</groupId>-->
+<!--      <artifactId>jose4j</artifactId>-->
+<!--      <version>0.7.0</version>-->
+<!--    </dependency>-->
     <dependency>
-      <groupId>org.bitbucket.b_c</groupId>
-      <artifactId>jose4j</artifactId>
-      <version>0.7.0</version>
+      <groupId>com.auth0</groupId>
+      <artifactId>java-jwt</artifactId>
+      <version>3.3.0</version>
     </dependency>
-
   </dependencies>
 
   <build>
