--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -22,7 +22,7 @@
   </filter-mapping>
   <filter-mapping>
     <filter-name>jwtFilter</filter-name>
-    <url-pattern>{/user/*,/restaurants/*,/saleFoods/*}</url-pattern>
+    <url-pattern>/user/*</url-pattern>
   </filter-mapping>
   <servlet>
     <servlet-name>dispatcher</servlet-name>
