--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -10,7 +10,7 @@ docker-build:
     - docker login -u "$CI_REGISTRY_USER" -p "$CI_REGISTRY_PASSWORD" $CI_REGISTRY
   script:
     - docker build -t "$CI_REGISTRY_IMAGE" .
-    - docker run -d 8080:8080 "$CI_REGISTRY_IMAGE"
+    # - docker run -d 8080:8080 "$CI_REGISTRY_IMAGE"
     - docker push "$CI_REGISTRY_IMAGE"
   only:
     - master
