--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -7,11 +7,11 @@ docker-build:
   services:
     - docker:dind
   before_script:
-    - docker login -u "$CI_REGISTRY_USER" -p "$CI_REGISTRY_PASSWORD" $CI_REGISTRY
+    - docker login -u "leila1378" -p "fakheri1378"
   script:
-    - docker build -t "$CI_REGISTRY_IMAGE" .
+    - docker build -t myapp .
     # - docker run -d 8080:8080 "$CI_REGISTRY_IMAGE"
-    - docker push "$CI_REGISTRY_IMAGE"
+    - docker push myapp
   only:
     - master
 
