--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -7,10 +7,10 @@ docker-build:
   services:
     - docker:dind
   before_script:
-    - docker login -u "leila1378" -p "fakheri1378" docker.io
+    - docker login -u "leila1378" -p "fakheri1378" 
   script:
-    - docker build -t "index.docker.io/leila1378/myapp" .
-    - docker push "index.docker.io/leila1378/myapp"
+    - docker build -t "index.docker.io/leila1378/loghmeh" .
+    - docker push "index.docker.io/leila1378/loghmeh"
   only:
     - master
 
