--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -9,8 +9,8 @@ docker-build:
   before_script:
     - docker login -u "leila1378" -p "fakheri1378" 
   script:
-    - docker build -t "index.docker.io/leila1378/loghmeh" .
-    - docker push "index.docker.io/leila1378/loghmeh"
+    - docker build -t "https://hub.docker.com/leila1378/loghmeh" .
+    - docker push "https://hub.docker.com/leila1378/loghmeh"
   only:
     - master
 
