--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -6,6 +6,16 @@ docker-build:
   stage: build
   services:
     - docker:dind
+    - mysql
+    variables:
+        MYSQL_DATABASE: loghmeh
+        MYSQL_ROOT_PASSWORD: yaali121
+    connect:
+        image: mysql
+        script:
+        - echo "SELECT 'OK';" | mysql --user=root --password="$MYSQL_ROOT_PASSWORD" --host=mysql "$MYSQL_DATABASE"
+
+
   before_script:
     - docker login -u "leila1378" -p "fakheri1378" 
   script:
