--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -7,9 +7,13 @@ docker-build:
   services:
     - docker:dind
     - mysql
-    variables:
-        MYSQL_DATABASE: loghmeh
-        MYSQL_ROOT_PASSWORD: yaali121
+  variables:
+      MYSQL_DATABASE: loghmeh
+      MYSQL_ROOT_PASSWORD: yaali121
+  Host: mysql
+  User: root
+  Password: "$MYSQL_ROOT_PASSWORD"
+  Database: "$MYSQL_DATABASE"
     connect:
         image: mysql
         script:
