--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -7,13 +7,13 @@ docker-build:
   services:
     # - mysql
     - docker:dind
-    variables:
-        MYSQL_DATABASE: loghmeh
-        MYSQL_ROOT_PASSWORD: yaali121
-    connect:
-        image: mysql
-        script:
-        - echo "SELECT 'OK';" | mysql --user=root --password="$MYSQL_ROOT_PASSWORD" --host=mysql "$MYSQL_DATABASE"
+    # variables:
+    #     MYSQL_DATABASE: loghmeh
+    #     MYSQL_ROOT_PASSWORD: yaali121
+    # connect:
+    #     image: mysql
+    #     script:
+    #     - echo "SELECT 'OK';" | mysql --user=root --password="$MYSQL_ROOT_PASSWORD" --host=mysql "$MYSQL_DATABASE"
 
 
   before_script:
