--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -5,7 +5,7 @@ docker-build:
   image: docker:latest
   stage: build
   services:
-    - mysql
+    - mysql : latest
     # - docker:dind
     variables:
         MYSQL_DATABASE: loghmeh
