--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -5,8 +5,8 @@ docker-build:
   image: docker:latest
   stage: build
   services:
-    - mysql : latest
-    # - docker:dind
+    - mysql:latest
+    - docker:dind
     variables:
         MYSQL_DATABASE: loghmeh
         MYSQL_ROOT_PASSWORD: yaali121
