--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,23 +1,22 @@
 stages:
-    - build
-    
+  - build
 docker-build:
-  image: docker:latest
+  image: 'docker:latest'
   stage: build
   services:
-    - mysql:latest
-    - docker:dind
+    - 'mysql:latest'
+    - 'docker:dind'
   variables:
     MYSQL_DATABASE: loghmeh
     MYSQL_ROOT_PASSWORD: yaali121
   connect:
     image: mysql
     script:
-    - echo "SELECT 'OK';" | mysql --user=root --password="$MYSQL_ROOT_PASSWORD" --host=mysql "$MYSQL_DATABASE"
-
-
+      - >-
+        echo "SELECT 'OK';" | mysql --user=root
+        --password="$MYSQL_ROOT_PASSWORD" --host=mysql "$MYSQL_DATABASE"
   before_script:
-    - docker login -u "leila1378" -p "fakheri1378" 
+    - docker login -u "leila1378" -p "fakheri1378"
   script:
     - docker build -t "index.docker.io/leila1378/loghmeh" .
     - docker push "index.docker.io/leila1378/loghmeh"
