--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -10,10 +10,10 @@ docker-build:
   variables:
     MYSQL_DATABASE: loghmeh
     MYSQL_ROOT_PASSWORD: yaali121
-  connect:
-    image: mysql
-    script:
-      - echo "SELECT 'OK';" | mysql --user=root --password="$MYSQL_ROOT_PASSWORD" --host=mysql "$MYSQL_DATABASE"
+#   connect:
+#     image: mysql
+#     script:
+#       - echo "SELECT 'OK';" | mysql --user=root --password="$MYSQL_ROOT_PASSWORD" --host=mysql "$MYSQL_DATABASE"
 
 
   before_script:
