--- a/backend.yml
+++ b/backend.yml
@@ -32,13 +32,13 @@ spec:
       containers:
         - name: backend
           image: leila1378/loghmeh:latest
+          imagePullPolicy: Always
           ports:
             - containerPort: 8080
           resources:
             limits:
-              memory: "350Mi"
-              cpu: "350m"
+              memory: "500Mi"
+              cpu: "200m"
             requests:
-              memory: "350Mi"
-              cpu: "350m"
-
+              memory: "500Mi"
+              cpu: "200m"
