--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -20,10 +20,10 @@
     <filter-name>DelayFilter</filter-name>
     <url-pattern>/users/*</url-pattern>
   </filter-mapping>
-  <filter-mapping>
-    <filter-name>jwtFilter</filter-name>
-    <url-pattern>/user/*</url-pattern>
-  </filter-mapping>
+<!--  <filter-mapping>-->
+<!--    <filter-name>jwtFilter</filter-name>-->
+<!--    <url-pattern>/user/*</url-pattern>-->
+<!--  </filter-mapping>-->
   <servlet>
     <servlet-name>dispatcher</servlet-name>
     <servlet-class>
